Ajuste na tela e nos componetes do pagamento (frontend)

--- a/frontend/src/app/componentes/assento/formaPagamento/dinheiro/dinheiro.component.html
+++ b/frontend/src/app/componentes/assento/formaPagamento/dinheiro/dinheiro.component.html
@@ -1,15 +1,5 @@
 <section class="servicePagamneto container-fluid">
     <div class="row">
-        <div class="col-md-4 telaOpcao">
-        <h3>Progresso</h3>
-        <div><span class="bolinhaVerde">xx</span> Escolha de sessão<br></div>
-        <div><span class="bolinhaVerde">xx</span> Escolha de assento<br></div>
-        <div><span class="bolinhaVerde">xx</span> Detalhes da compra<br></div>
-        <div><span class="bolinhaVerde">xx</span> Forma de pagamento<br></div>
-        <div><span class="bolinhaVermelho">xx</span> Finalizado<br></div>
-        <a class="botaoVoltar" href="detalhes.html">Voltar</a>
-        
-        </div>
         <div class="col-md-8">
             <h1>Cartão de Dinheiro:</h1>
             <div class="row">
@@ -20,25 +10,7 @@
                     CPF:<input type="text">
                 </div>
             </div>
-            <table>
-                <tr>
-                  <th>Quantidade</th>
-                  <th>Valor</th>
-                </tr>
-                <tr>
-                  <td>1x Inteira</td>
-                  <td>R$: 20,00</td>
-                </tr>
-                <tr>
-                    <td>1x Inteira</td>
-                    <td>R$: 20,00</td>
-                </tr>
-                <tr>
-                    <td>TOTAL:</td>
-                    <td>R$: 40,00</td>
-                </tr>
-              </table>
-              <a class="finalizar" href="finalizar.html">Avançar</a>
+              <a class="finalizar" routerLink="/pagamento/fim">Avançar</a>
         </div>
     </div>
 </section>	
